Gateway/higress/httproute-http2rpc-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: "httproute-http2rpc-demo"
  name: httproute-http2rpc-demo-ingress
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
  - host: "foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          resource:
            apiGroup: networking.higress.io
            kind: Http2Rpc
            name: httproute-http2rpc-demo
